Make sure text describing porjects is visible

--- a/src/pages/poseGraphPrediction/poseGraphPrediction.scss
+++ b/src/pages/poseGraphPrediction/poseGraphPrediction.scss
@@ -276,6 +276,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+    overflow: visible;
 
     opacity: 0;
     transform: translateX(-50px);
